--- a/imx6/etc/init.rc
+++ b/imx6/etc/init.rc
@@ -714,5 +714,5 @@ service sdcard /system/bin/sdcard -t4 /data/media /mnt/shell/emulated 1023 1023
     class late_start
 
 # Set watchdog timer to 30 seconds and pet it every 10 seconds to get a 20 second margin
-service watchdogd /sbin/watchdogd 10 20
-    class core
+#service watchdogd /sbin/watchdogd 10 20
+#    class core
