--- a/imx6/etc/ueventd.freescale.rc
+++ b/imx6/etc/ueventd.freescale.rc
@@ -1,4 +1,5 @@
 /dev/pmem_gpu             0660   system     graphics
+/dev/ttymxc3              0660   root       inet
 /dev/ttymxc4              0660   bluetooth  bluetooth
 /dev/snd/*                0660   system     audio
 /dev/ttyUSB*              0640   radio      radio
